force-app/main/default/objects/Activity/fields/CWS_Project_Management_Software__c.field-meta.xml
<CustomField>
    <fullName>CWS_Project_Management_Software__c</fullName>
    <inlineHelpText>Captures which competitor Project Management Software the prospect currently uses.</inlineHelpText>
    <label>Project Management Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MS Projects</fullName>
            </value>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>JetBlue</fullName>
            </value>
            <value>
                <fullName>JIRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>