force-app/main/default/objects/Activity/fields/CWS_Prospect_Tracking__c.field-meta.xml
<CustomField>
    <fullName>CWS_Prospect_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect Tracking</label>
    <referenceTo>Prospect_Tracking__c</referenceTo>
    <relationshipLabel>Related Activities</relationshipLabel>
    <relationshipName>RelatedActivities</relationshipName>
    <type>Lookup</type>
</CustomField>