force-app/main/default/objects/Activity/fields/CWS_Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>CWS_Quote_Id__c</fullName>
    <label>Quote Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>