force-app/main/default/objects/Activity/fields/CWS_Quoting_Software__c.field-meta.xml
<CustomField>
    <fullName>CWS_Quoting_Software__c</fullName>
    <inlineHelpText>Captures which competitor Quoting Software the prospect currently uses.</inlineHelpText>
    <label>Quoting Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dtools</fullName>
            </value>
            <value>
                <fullName>Gluh</fullName>
            </value>
            <value>
                <fullName>QuoteWerks</fullName>
            </value>
            <value>
                <fullName>Salesforce CPQ</fullName>
            </value>
            <value>
                <fullName>ChannelOnline</fullName>
            </value>
            <value>
                <fullName>Quoter</fullName>
            </value>
            <value>
                <fullName>QuoteRoller(PandDoc)</fullName>
            </value>
            <value>
                <fullName>Excel/Word</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>