force-app/main/default/objects/Activity/fields/CWS_Reason_Recycle_Disqualify__c.field-meta.xml
<CustomField>
    <fullName>CWS_Reason_Recycle_Disqualify__c</fullName>
    <inlineHelpText>Captures the reason why the Task is being recycled or disqualified.</inlineHelpText>
    <label>Reason Recycle/Disqualify</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unable to Reach</fullName>
            </value>
            <value>
                <fullName>Not Ready to Buy</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>Using a Competitor</fullName>
            </value>
            <value>
                <fullName>Insufficient Data</fullName>
            </value>
            <value>
                <fullName>Job Seeker</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Not a Prospect</fullName>
            </value>
            <value>
                <fullName>No Authority</fullName>
            </value>
            <value>
                <fullName>Invalid Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>