force-app/main/default/objects/Activity/fields/CWS_Recovery_Point_Objective__c.field-meta.xml
<CustomField>
    <fullName>CWS_Recovery_Point_Objective__c</fullName>
    <description>Number of Days they need to be able to go back</description>
    <inlineHelpText>Captures the Number of Days the prospect needs to be able to go back for recovery.</inlineHelpText>
    <label>Recovery Point Objective</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>