force-app/main/default/objects/Activity/fields/CWS_Recovery_Time_Objective__c.field-meta.xml
<CustomField>
    <fullName>CWS_Recovery_Time_Objective__c</fullName>
    <description>How fast they need to be able to restore systems to operation</description>
    <inlineHelpText>Captures how fast the propsect needs to be able to restore systems to operation.</inlineHelpText>
    <label>Recovery Time Objective</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>