force-app/main/default/objects/Activity/fields/CWS_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>CWS_Recurring_Revenue__c</fullName>
    <inlineHelpText>Captures the prospect&apos;s percentage of recurring revenue.</inlineHelpText>
    <label>Recurring Revenue %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>