force-app/main/default/objects/Activity/fields/CWS_Related_User_Email__c.field-meta.xml
<CustomField>
    <fullName>CWS_Related_User_Email__c</fullName>
    <label>Related User Email</label>
    <type>Email</type>
</CustomField>