force-app/main/default/objects/Activity/fields/CWS_Related_User_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Related_User_Name__c</fullName>
    <label>Related User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>