force-app/main/default/objects/Activity/fields/CWS_Remote_Control_Software__c.field-meta.xml
<CustomField>
    <fullName>CWS_Remote_Control_Software__c</fullName>
    <description>Demo Task Type Field</description>
    <inlineHelpText>Captures which competitor Remote Control Software the prospect currently uses.</inlineHelpText>
    <label>Remote Control Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bomgar</fullName>
            </value>
            <value>
                <fullName>GotoAssist</fullName>
            </value>
            <value>
                <fullName>LogMeIn Rescue</fullName>
            </value>
            <value>
                <fullName>LogmeIn Pro</fullName>
            </value>
            <value>
                <fullName>SimpleHelp</fullName>
            </value>
            <value>
                <fullName>Splashtop</fullName>
            </value>
            <value>
                <fullName>TeamViewer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>