force-app/main/default/objects/Activity/fields/CWS_Reporting_Complexity__c.field-meta.xml
<CustomField>
    <fullName>CWS_Reporting_Complexity__c</fullName>
    <inlineHelpText>Captures the level of reporting complexity is required.</inlineHelpText>
    <label>Reporting Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Heavy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>