force-app/main/default/objects/Activity/fields/CWS_Reporting_Software__c.field-meta.xml
<CustomField>
    <fullName>CWS_Reporting_Software__c</fullName>
    <description>Demo Task Type Fields</description>
    <inlineHelpText>Captures which competitor Reporting Software the prospect currently uses.</inlineHelpText>
    <label>Reporting Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PowerBI</fullName>
            </value>
            <value>
                <fullName>BrightGauge</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>CRM/PSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>