force-app/main/default/objects/Activity/fields/CWS_Security_Operational_Maturity_Level__c.field-meta.xml
<CustomField>
    <fullName>CWS_Security_Operational_Maturity_Level__c</fullName>
    <inlineHelpText>Captures the level of Secuirity Operational Maturity is required.</inlineHelpText>
    <label>Security Operational Maturity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Heavy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>