force-app/main/default/objects/Activity/fields/CWS_Server_Count__c.field-meta.xml
<CustomField>
    <fullName>CWS_Server_Count__c</fullName>
    <inlineHelpText>Captures the number of the prospect&apos;s servers.</inlineHelpText>
    <label>Server Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>