force-app/main/default/objects/Activity/fields/CWS_Service_Desk_Software__c.field-meta.xml
<CustomField>
    <fullName>CWS_Service_Desk_Software__c</fullName>
    <inlineHelpText>Captures which competitor Service Desk Software the prospect currently uses.</inlineHelpText>
    <label>Service Desk Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collabrance</fullName>
            </value>
            <value>
                <fullName>GMS Live Expert</fullName>
            </value>
            <value>
                <fullName>Inbay</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>IT by Design</fullName>
            </value>
            <value>
                <fullName>Live VHD</fullName>
            </value>
            <value>
                <fullName>Proval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>