force-app/main/default/objects/Activity/fields/CWS_SQO_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_SQO_Completion_Date__c</fullName>
    <label>SQO Completion Date</label>
    <type>Date</type>
</CustomField>