force-app/main/default/objects/Activity/fields/CWS_Task_Subtype__c.field-meta.xml
<CustomField>
    <fullName>CWS_Task_Subtype__c</fullName>
    <inlineHelpText>Captures more detail about the Task.</inlineHelpText>
    <label>Task Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event Follow Up</fullName>
            </value>
            <value>
                <fullName>General Follow Up</fullName>
            </value>
            <value>
                <fullName>Introduction</fullName>
            </value>
            <value>
                <fullName>New Lead</fullName>
            </value>
            <value>
                <fullName>Ops Review</fullName>
            </value>
            <value>
                <fullName>Partner Business Review (PBR)</fullName>
            </value>
            <value>
                <fullName>Partner Scorecard</fullName>
            </value>
            <value>
                <fullName>Pre-Sales Demo (Still need w/DEMO object we&apos;re creating)</fullName>
            </value>
            <value>
                <fullName>Progress Call</fullName>
            </value>
            <value>
                <fullName>Sales Pitch</fullName>
            </value>
            <value>
                <fullName>Telesales Call</fullName>
            </value>
            <value>
                <fullName>Partner Care Check-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>