force-app/main/default/objects/Activity/fields/CWS_Trial_Follow_Up_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Trial_Follow_Up_Completion_Date__c</fullName>
    <label>Trial / Follow Up Completion Date</label>
    <type>Date</type>
</CustomField>