force-app/main/default/objects/Activity/fields/CWS_Type_of_Engagement__c.field-meta.xml
<CustomField>
    <fullName>CWS_Type_of_Engagement__c</fullName>
    <inlineHelpText>Indicates the type of engagement this Demo is in the Sales process.</inlineHelpText>
    <label>Type of Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Sales</fullName>
            </value>
            <value>
                <fullName>Post-Sales</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Trial/Eval Assistance</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>