force-app/main/default/objects/Activity/fields/CWS_What_Security_Solutions__c.field-meta.xml
<CustomField>
    <fullName>CWS_What_Security_Solutions__c</fullName>
    <description>Security Products and Process in use today internally and at customers</description>
    <inlineHelpText>Captures Security Products and Processes in use today internally and at customers.</inlineHelpText>
    <label>Current Security Solutions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>