force-app/main/default/objects/Activity/fields/CWS_Whatverticalsdotheyhaveinbusiness__c.field-meta.xml
<CustomField>
    <fullName>CWS_Whatverticalsdotheyhaveinbusiness__c</fullName>
    <inlineHelpText>Captures the various verticals in the prospect&apos;s business.</inlineHelpText>
    <label>What verticals do they have in business</label>
    <type>TextArea</type>
</CustomField>