force-app/main/default/objects/Activity/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>Refers to the due End Date and Time of the Task</description>
    <inlineHelpText>Refers to the due End Date and Time of the Task</inlineHelpText>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>