force-app/main/default/objects/Activity/fields/GSTaskId__c.field-meta.xml
<CustomField>
    <fullName>GSTaskId__c</fullName>
    <label>GS Task Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>