force-app/main/default/objects/Activity/fields/Is_VOIP_integration_required__c.field-meta.xml
<CustomField>
    <fullName>Is_VOIP_integration_required__c</fullName>
    <inlineHelpText>Indicates if a VOIP integration is necessary for the Demo.</inlineHelpText>
    <label>Is VOIP integration required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>