force-app/main/default/objects/Activity/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>Refers to the due Start Date and Time of the Task</description>
    <inlineHelpText>Refers to the due Start Date and Time of the Task</inlineHelpText>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>