force-app/main/default/objects/Activity/fields/tz__Timezone__c.field-meta.xml
<CustomField>
    <fullName>tz__Timezone__c</fullName>
    <description>Timezone abbreviation (PST, EST,etc..)</description>
    <inlineHelpText>Timezone abbreviation (PST, EST,etc..)</inlineHelpText>
    <label>Timezone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>